--- a/scss/style.css
+++ b/scss/style.css
@@ -13,7 +13,7 @@
 
 body {
   font-family: 'Fira Sans', sans-serif;
-  font-size: 13px;
+  font-size: 30px;
   color: #c71f73;
   background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
@@ -21,7 +21,7 @@ body {
 .contenedor-index {
   display: grid;
   grid-template-columns: 1fr  1fr;
-  grid-template-rows: 30vh    12vh    140vh    15vh;
+  grid-template-rows: 65vh    25vh    430vh    18vh;
   background-color: #d479e9;
   grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
@@ -29,7 +29,7 @@ body {
 .contenedor-mision {
   display: grid;
   grid-template-columns: 1fr  1fr;
-  grid-template-rows: 30vh    12vh    36vh  15vh;
+  grid-template-rows: 65vh    25vh    180vh  18vh;
   background-color: #d479e9;
   grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
 }
@@ -37,7 +37,7 @@ body {
 .contenedor-adoptar {
   display: grid;
   grid-template-columns: 1fr  1fr;
-  grid-template-rows: 30vh    12vh    80vh    15vh;
+  grid-template-rows: 65vh    25vh    90vh    18vh;
   flex-wrap: wrap;
   grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
@@ -45,14 +45,14 @@ body {
 .contenedor-transitar {
   display: grid;
   grid-template-columns: 1fr  1fr;
-  grid-template-rows: 30vh    10vh    50vh    15vh;
+  grid-template-rows: 65vh    25vh    90vh    18vh;
   grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
 
 .contenedor-publicar {
   display: grid;
   grid-template-columns: 1fr  1fr;
-  grid-template-rows: 30vh    10vh    125vh    30vh;
+  grid-template-rows: 65vh    25vh    180vh    18vh;
   flex-wrap: wrap;
   grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
@@ -60,7 +60,7 @@ body {
 .contenedor-seccion2 {
   display: grid;
   grid-template-columns: 1fr  1fr;
-  grid-template-rows: 30vh    12vh    70vh    15vh;
+  grid-template-rows: 65vh    25vh    140vh    18vh;
   flex-wrap: wrap;
   grid-template-areas: "header header" "section    section" "main   main" "footer footer";
 }
@@ -70,7 +70,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   padding: 10px;
-  font-size: 15px;
+  font-size: 30px;
   padding: 20px;
   text-align: justify;
 }
@@ -79,7 +79,7 @@ header {
   grid-area: header;
   background-image: url(../images/imagenheader.jpg);
   background-size: contain !important;
-  background-repeat: repeat-x;
+  background-repeat: repeat-x y;
   padding: 10px;
 }
 
@@ -90,18 +90,19 @@ header a {
   color: #370263;
   background-color: #eaa9f8;
   border-radius: 10%;
+  font-size: 33px;
 }
 
 header a:hover {
   color: #2c0936;
-  font-size: 20px;
+  font-size: 40px;
   background-color: #827386;
   border-radius: 30%;
 }
 
 header img {
-  height: 8%;
-  width: 8%;
+  height: 14%;
+  width: 14%;
   padding-top: 0px;
   padding-right: 15px;
   padding-left: 15px;
@@ -152,20 +153,20 @@ aside {
   flex-direction: row;
   flex-wrap: wrap;
   padding: 35px;
-  font-size: 15px;
+  font-size: 30px;
   text-align: justify;
 }
 
 .index-caja-chica img {
-  height: 25%;
-  width: 40%;
+  height: 15%;
+  width: 70%;
   padding: 10px;
   transition: all 1s;
 }
 
 .index-caja-chica img:hover {
-  height: 35%;
-  width: 45%;
+  height: 20%;
+  width: 65%;
   transform: rotatez(10deg);
 }
 
@@ -178,7 +179,7 @@ footer {
 }
 
 .adoptar {
-  font-size: 40px;
+  font-size: 50px;
   padding: 30px;
   text-align: center;
 }
@@ -205,20 +206,16 @@ footer {
   }
 }
 
-.espacio p {
-  padding: 5px;
-}
-
 h2 {
   padding: 10px;
   text-align: center;
-  font-size: 15px;
+  font-size: 34px;
   padding: 4px;
 }
 
 h1 {
   text-align: center;
-  font-size: 19px;
+  font-size: 39px;
   padding: 5px;
 }
 
@@ -227,8 +224,8 @@ h1 {
 }
 
 .form-select {
-  height: 1px;
-  width: 200px;
+  height: 2px;
+  width: 250px;
   line-height: 1,5;
 }
 
@@ -239,7 +236,7 @@ h1 {
   align-items: center;
   padding: 5px;
   text-align: end;
-  font-size: 8px;
+  font-size: 25px;
 }
 
 .sec2-caja-grande {
@@ -248,13 +245,13 @@ h1 {
   padding: 5px;
   align-content: space-around;
   padding: 5px;
-  text-align: start;
-  font-size: 8px;
+  text-align: center;
+  font-size: 20px;
 }
 
 .fotos-caja-chica img {
-  height: 180px;
-  width: 150px;
+  height: 320px;
+  width: 290px;
   padding: 5px;
 }
 
@@ -390,6 +387,49 @@ h1 {
     height: 2%;
     width: 25%;
   }
+  .index-caja-chica img {
+    height: 12%;
+    width: 85%;
+  }
+}
+
+.contenedor-index {
+  display: grid;
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 65vh    20vh    360vh    18vh;
+  grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
+}
+
+.contenedor-seccion2 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65vh    25vh    290vh    18vh;
+  flex-wrap: wrap;
+  grid-template-areas: "header" "section" "main" "footer";
+}
+
+.sec2-caja-grande {
+  flex-direction: column;
+}
+
+.contenedor-transitar {
+  display: grid;
+  grid-template-columns: 1fr  1fr;
+  grid-template-rows: 65vh    20vh    100vh    18vh;
+  grid-template-areas: "header header" "section    section" "main   main" "footer footer";
+}
+
+@media screen and (min-width: 500px) and (max-width: 600px) {
+  .contenedor-mision {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 65vh    25vh    230vh   18vh;
+    grid-template-areas: "header header" "section section" "main aside" "footer footer";
+  }
+  header img {
+    height: 25%;
+    width: 25%;
+  }
 }
 
 @media screen and (min-width: 800px) and (max-width: 3000px) {
@@ -399,38 +439,38 @@ h1 {
   .contenedor-mision {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 65vh    12vh    50vh   15vh;
+    grid-template-rows: 65vh    20vh    130vh   18vh;
     grid-template-areas: "header header" "section section" "main aside" "footer footer";
   }
   .contenedor-adoptar {
     display: grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    12vh    140vh    15vh;
+    grid-template-rows: 65vh    20vh    150vh    18vh;
     grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-index {
     display: grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    12vh    145vh    15vh;
+    grid-template-rows: 65vh    20vh    430vh    18vh;
     grid-template-areas: "header header" "section    section" "main   aside" "footer footer";
   }
   .contenedor-transitar {
     display: grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    12vh    48vh    15vh;
+    grid-template-rows: 65vh    20vh    100vh    18vh;
     grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-publicar {
     display: grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    12vh    125vh    15vh;
+    grid-template-rows: 65vh    20vh    170vh    18vh;
     flex-wrap: wrap;
     grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
   .contenedor-seccion2 {
     display: grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 65vh    10vh    80vh    15vh;
+    grid-template-rows: 65vh    20vh    130vh    18vh;
     flex-wrap: wrap;
     grid-template-areas: "header header" "section    section" "main   main" "footer footer";
   }
@@ -439,6 +479,7 @@ h1 {
     height: 250px;
   }
   .sec2-caja-grande {
+    flex-direction: row;
     justify-content: center;
   }
 }
