--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,7 @@ $font-color-3:#c71f73;
 
 body {
     font-family: 'Fira Sans', sans-serif;
-    font-size: 13px;
+    font-size: 30px;
     color: $font-color-3;
     background-image: linear-gradient(58deg, #d479e9 0%, #d4e6e6 46%, #eb7fd2 100%);
 }
@@ -37,7 +37,7 @@ body {
 .contenedor-index{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 30vh    12vh    140vh    15vh;
+    grid-template-rows: 65vh    25vh    430vh    18vh;
     background-color:$background-color-1;
     grid-template-areas: 
     "header header"
@@ -49,7 +49,7 @@ body {
 .contenedor-mision{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 30vh    12vh    36vh  15vh;
+    grid-template-rows: 65vh    25vh    180vh  18vh;
     background-color:$background-color-1;
     grid-template-areas: 
     "header header"
@@ -61,7 +61,7 @@ body {
 .contenedor-adoptar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 30vh    12vh    80vh    15vh;
+    grid-template-rows: 65vh    25vh    90vh    18vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header header"
@@ -73,7 +73,7 @@ body {
 .contenedor-transitar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 30vh    10vh    50vh    15vh;
+    grid-template-rows: 65vh    25vh    90vh    18vh;
     grid-template-areas: 
     "header header"
     "section    section"
@@ -84,7 +84,7 @@ body {
 .contenedor-publicar{
     display:grid;
     grid-template-columns: 1fr  1fr;
-    grid-template-rows: 30vh    10vh    125vh    30vh;
+    grid-template-rows: 65vh    25vh    180vh    18vh;
     flex-wrap: wrap;
     grid-template-areas: 
     "header header"
@@ -96,7 +96,7 @@ body {
 .contenedor-seccion2{
         display:grid;
         grid-template-columns: 1fr  1fr;
-        grid-template-rows: 30vh    12vh    70vh    15vh;
+        grid-template-rows: 65vh    25vh    140vh    18vh;
         flex-wrap: wrap;
         grid-template-areas: 
         "header header"
@@ -110,7 +110,7 @@ body {
     flex-direction:row;
     flex-wrap: wrap;
     padding: 10px;
-    font-size: 15px;
+    font-size:30px;
     padding: 20px;
     text-align: justify;
     @extend %alienacion;
@@ -120,7 +120,7 @@ header{
     grid-area: header;
     background-image: url(../images/imagenheader.jpg);
     background-size: contain!important;
-    background-repeat: repeat-x;
+    background-repeat:repeat-x y;
     padding: 10px;
         a{  list-style: none;
     text-decoration: none;
@@ -128,15 +128,16 @@ header{
     color:$font-color-1;
     background-color: #eaa9f8;
     border-radius: 10%;
+    font-size: 33px;
     }   
         a:hover {
     color: $font-color-2;
-    font-size: 20px;
+    font-size: 40px;
     background-color: #827386;
     border-radius: 30%;
     }
         img {
-    @include tamaños(8%,8%); 
+    @include tamaños(14%,14%); 
     padding-top:0px;
     padding-right: 15px; 
     padding-left: 15px;
@@ -189,16 +190,16 @@ aside{
     flex-direction:row;
     flex-wrap: wrap;
     padding: 35px;
-    font-size: 15px;
+    font-size: 30px;
     text-align: justify;
     @extend %alienacion;
         img{
-    @include tamaños(25%,40%); 
+    @include tamaños(15%,70%); 
     padding: 10px;
     transition: all 1s;
 }
         img:hover{
-    @include tamaños(35%,45%); 
+    @include tamaños(20%,65%); 
     transform: rotatez(10deg);
 }
 }
@@ -212,7 +213,7 @@ footer{
 }
 
 .adoptar{
-    font-size: 40px;
+    font-size: 50px;
     padding: 30px;
     text-align: center;
         img{
@@ -232,14 +233,10 @@ footer{
     100%{width: 38%;}
 }
 
-.espacio p{
-    padding: map-get($cont-small, padding);
-}
-
 h2{
     padding: 10px;
     text-align: center;
-    font-size: 15px;
+    font-size: 34px;
     padding: 4px;
     @extend %alienacion;
 }
@@ -247,7 +244,7 @@ h2{
 h1{
     text-align: center;
     @extend %alienacion;
-    font-size: 19px;
+    font-size: 39px;
     padding: 5px;
 }
 .H1boot{
@@ -255,7 +252,7 @@ h1{
 }
 
 .form-select{
-    @include tamaños(1px,200px); 
+    @include tamaños(2px,250px); 
     @extend %alienacion; 
     line-height: 1,5;   
 }
@@ -267,7 +264,7 @@ h1{
     align-items: center;
     padding: map-get($cont-small, padding);
     text-align: end;
-    font-size: 8px;
+    font-size: 25px;
 }
 
 .sec2-caja-grande{
@@ -277,14 +274,14 @@ h1{
     align-content:space-around;
     @extend %alienacion;
     padding: map-get($cont-small, padding);
-    text-align:start;
-    font-size: 8px;
+    text-align:center;
+    font-size: 20px;
 }
 
 .fotos-caja-chica {
     @extend %alienacion;
     img{
-        @include tamaños(180px,150px); 
+        @include tamaños(320px,290px); 
         padding: map-get($cont-small, padding);
     }
      p{
@@ -452,11 +449,73 @@ h1{
 }
 }
 @media screen and (min-width:500px) and (max-width: 800px){
-    header img {
+header img {
         @include tamaños(16%,16%);}
-    .index-caja-chica{
+
+.index-caja-chica{
         @include tamaños(2%,25%); 
+        img { @include tamaños(12%,85%);
+        }
     }
+}
+
+.contenedor-index{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 65vh    20vh    360vh    18vh;
+    grid-template-areas: 
+    "header header"
+    "section    section"
+    "main   aside"
+    "footer footer";
+} 
+
+.contenedor-seccion2{
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 65vh    25vh    290vh    18vh;
+    flex-wrap: wrap;
+    grid-template-areas: 
+    "header"
+    "section"
+    "main"
+    "footer";
+}
+
+.sec2-caja-grande {
+    flex-direction: column;
+}
+
+.contenedor-transitar{
+    display:grid;
+    grid-template-columns: 1fr  1fr;
+    grid-template-rows: 65vh    20vh    100vh    18vh;
+    grid-template-areas:
+    "header header"
+    "section    section"
+    "main   main"
+    "footer footer";
+} 
+
+@media screen and (min-width:500px) and (max-width: 600px){
+
+.contenedor-mision{
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 65vh    25vh    230vh   18vh;
+            grid-template-areas:
+            "header header"
+            "section section"
+            "main aside"
+            "footer footer";
+        }
+
+        header {
+            img{
+                height: 25%;
+                width: 25%;
+            }
+        }
 }
 
 @media screen and (min-width:800px) and (max-width: 3000px){
@@ -467,7 +526,7 @@ h1{
         .contenedor-mision{
             display:grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 65vh    12vh    50vh   15vh;
+            grid-template-rows: 65vh    20vh    130vh   18vh;
             grid-template-areas:
             "header header"
             "section section"
@@ -478,7 +537,7 @@ h1{
         .contenedor-adoptar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 65vh    12vh    140vh    15vh;
+            grid-template-rows: 65vh    20vh    150vh    18vh;
             grid-template-areas: 
             "header header"
             "section    section"
@@ -489,7 +548,7 @@ h1{
         .contenedor-index{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 65vh    12vh    145vh    15vh;
+            grid-template-rows: 65vh    20vh    430vh    18vh;
             grid-template-areas: 
             "header header"
             "section    section"
@@ -500,7 +559,7 @@ h1{
         .contenedor-transitar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 65vh    12vh    48vh    15vh;
+            grid-template-rows: 65vh    20vh    100vh    18vh;
             grid-template-areas:
             "header header"
             "section    section"
@@ -511,7 +570,7 @@ h1{
         .contenedor-publicar{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 65vh    12vh    125vh    15vh;
+            grid-template-rows: 65vh    20vh    170vh    18vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
@@ -523,7 +582,7 @@ h1{
         .contenedor-seccion2{
             display:grid;
             grid-template-columns: 1fr  1fr;
-            grid-template-rows: 65vh    10vh    80vh    15vh;
+            grid-template-rows: 65vh    20vh    130vh    18vh;
             flex-wrap: wrap;
             grid-template-areas: 
             "header header"
@@ -538,6 +597,7 @@ h1{
         }
 
         .sec2-caja-grande{
+            flex-direction: row;
             justify-content: center;
         }   
     }
